modules/web/js/tests/resources/parser/invalidSyntax/ReservedWordVariable.bal
package samples.parser.invalidSyntax;

function main(string[] i) {
	// Following line is invalid.
	string resource;
	reply m;
}
